[tool.poetry]
name = "better-web3"
version = "4.0.0.b1"
description = "Chains, Contracts, batch calls and other Web3 stuff!"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alenkimov/better_web3"
packages = [{include = "better_web3"}]

[tool.poetry.dependencies]
python = "^3.8"
better-proxy = "^1.1.5"
web3 = {version="^7.0.0b3", allow-prereleases=true}

[tool.poetry.group.dev.dependencies]
setuptools = "^69"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
