[tool.poetry]
name = "better-web3"
version = "4.1.0"
description = "Web3 stuff"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alenkimov/better_web3"
packages = [{include = "better_web3"}]

[tool.poetry.dependencies]
python = "^3.8"
better-proxy = "^1.2"
pydantic     = "^2"
web3         = "^7.9"

[tool.poetry.group.dev.dependencies]
setuptools = "^69"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
